fix: display datepicker on ios

--- a/src/components/DatePicker/Calendar.css
+++ b/src/components/DatePicker/Calendar.css
@@ -1,5 +1,5 @@
 .react-calendar {
-  @apply w-[320px] max-w-full bg-white shadow-md rounded-lg overflow-hidden fixed;
+  @apply w-[320px] max-w-full bg-white shadow-md rounded-lg overflow-hidden absolute;
 }
 
 .react-calendar--doubleView {
