--- a/src/components/DatePicker/DatePicker.css
+++ b/src/components/DatePicker/DatePicker.css
@@ -1,6 +1,6 @@
 .react-date-picker {
   display: inline-flex;
-  position: relative;
+  position: unset !important;
 }
 
 .react-date-picker,
@@ -84,9 +84,8 @@
 }
 
 .react-date-picker__calendar {
-  width: 350px;
-  max-width: 100vw;
-  position: absolute;
+  max-width: 0;
+  position: unset !important;
   top: 100%;
   left: 0;
   z-index: 1;
@@ -94,4 +93,8 @@
 
 .react-date-picker__calendar--closed {
   display: none;
+}
+
+.react-date-picker__inputGroup input[name="date"] {
+  max-width: 0;
 }
